tests/toy/fail_runtime_context.toy
'inner [
    10 "oops" +
] def

'outer [
    inner
] def

outer
